overflow bug again

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -37,6 +37,7 @@ body {
 .content {
   flex: 1;
   overflow: visible;
+  overflow-x: auto;
   position: relative;
   box-sizing: border-box;
   max-width: 35rem;
